se crearon las identidades/tablas para el funcionamiento, y se implemento entityframework como ORM; se realizo la primera migración

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "JīaoAPIDBConnectionString": "Data Source=JīaoApi-2025.db"
+  }
 }
